--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_invisible">InvisibleActivity</string>
     <string name="title_activity_beacon_info">BeaconInfoActivity</string>
+    <string name="btn_yes">Yes</string>
+    <string name="btn_no">No</string>
 
 </resources>
