added settings page for getting list of yes no

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="btn_yes">Yes</string>
     <string name="btn_no">No</string>
     <string name="notification">More info on:</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
