--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">Reading The City</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_invisible">InvisibleActivity</string>
     <string name="title_activity_beacon_info">BeaconInfoActivity</string>
@@ -10,5 +9,6 @@
     <string name="btn_no">No</string>
     <string name="notification">More info on:</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="settings">Settings</string>
 
 </resources>
