--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="settings">Settings</string>
 
+    <string name="major">Major:  </string>
+    <string name="minor">Minor:  </string>
+    <string name="rssi">RSSI:  </string>
+
 </resources>
